--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-status-bar": "~1.6.0",
     "prettier": "^3.0.3",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-paper": "^5.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
