--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-paper": "^5.10.5"
+    "react-native-paper": "^5.10.5",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
