--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
     "@react-native-community/eslint-config": "^3.2.0",
     "eslint": "^8.49.0",
     "expo": "~49.0.11",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "prettier": "^3.0.3",
     "react": "18.2.0",
