--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
     "eslint": "^8.49.0",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
@@ -21,8 +23,10 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-paper": "^5.10.5",
-    "styled-components": "^6.0.8",
-    "react-native-svg": "13.9.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
