--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.8",
-    "react-native-maps": "1.7.1"
+    "react-native-maps": "1.7.1",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
