--- a/package.json
+++ b/package.json
@@ -12,26 +12,28 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "camelize": "^1.0.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.2",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.10.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "styled-components": "^6.0.8",
-    "react-native-maps": "1.7.1",
     "react-native-webview": "13.2.2",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
