--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.5.2",
+    "firebase": "8.2.3",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.4",
